@@ -1,13 +1,20 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.fractionsintro.intro.model.pieset;
 
+import fj.F;
+import fj.Ordering;
+
 import java.awt.Shape;
 import java.awt.geom.Arc2D;
 import java.awt.geom.Ellipse2D;
+import java.util.ArrayList;
+import java.util.HashMap;
 
 import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.util.function.Function1;
+
+import static fj.Ord.ord;
 
 /**
  * Factory pattern for creating cakes.  Even though cakes are images, use an underlying shape representation to efficiently re-use code for other representations.
@@ -55,5 +62,47 @@ public class CakeSliceFactory extends AbstractSliceFactory {
         final double anglePerSlice = 2 * Math.PI / denominator;
         final ImmutableVector2D location = new ImmutableVector2D( diameter * ( pie + 1 ) + spacing * ( pie + 1 ) - 80 + offset, 250 );
         return new Slice( location, anglePerSlice * cell, false, null, getShapeFunction( anglePerSlice ) );
+    }
+
+    //Find which should appear before/after others in z-ordering.  Must be back to front.
+    public static final HashMap<Integer, int[]> _renderOrder = new HashMap<Integer, int[]>() {{
+        put( 1, new int[] { 1 } );
+        put( 2, new int[] { 2, 1 } );
+        put( 3, new int[] { 1, 2, 3 } );
+        put( 4, new int[] { 1, 2, 3, 4 } );
+        put( 5, new int[] { 2, 1, 3, 5, 4 } );
+        put( 6, new int[] { 2, 1, 3, 6, 4, 5 } );
+        put( 7, new int[] { 2, 3, 1, 4, 7, 5, 6 } );
+        put( 8, new int[] { 2, 3, 1, 4, 5, 8, 6, 7 } );
+
+
+//        put( 12, new int[] { 3, 4, 5, 2, 6, 1, 7, 12, 8, 11, 9, 10 } );
+    }};
+
+
+    //Fix the z-ordering for cake slices
+    public PieSet sort( final PieSet p ) {
+        final int[] renderOrder = _renderOrder.get( p.denominator );
+        final ArrayList<Integer> list = new ArrayList<Integer>() {{
+            for ( int e : renderOrder ) {
+                add( e );
+            }
+        }};
+        return p.slices( p.slices.sort( ord( new F<Slice, F<Slice, Ordering>>() {
+            @Override public F<Slice, Ordering> f( final Slice a ) {
+                return new F<Slice, Ordering>() {
+                    @Override public Ordering f( Slice b ) {
+                        int cellA = list.indexOf( a.cell( p.denominator ) + 1 );
+                        int cellB = list.indexOf( b.cell( p.denominator ) + 1 );
+                        return cellA > cellB ? Ordering.GT :
+                               cellA < cellB ? Ordering.LT :
+                               //Use any rule that differentiates the slices so the bucket slices don't jump around because of all being equal
+                               a.hashCode() > b.hashCode() ? Ordering.GT :
+                               a.hashCode() < b.hashCode() ? Ordering.LT :
+                               Ordering.EQ;
+                    }
+                };
+            }
+        } ) ) );
     }
 }
